# Generated by Django 5.2.1 on 2025-06-13 02:39

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = []

    operations = [
        migrations.CreateModel(
            name="Publication",
            fields=[
                (
                    "id",
                    models.CharField(max_length=255, primary_key=True, serialize=False, unique=True),
                ),
                (
                    "entrytype",
                    models.CharField(
                        choices=[
                            ("article", "Article"),
                            ("book", "Book"),
                            ("booklet", "Booklet"),
                            ("conference", "Conference"),
                            ("inbook", "Inbook"),
                            ("incollection", "Incollection"),
                            ("inproceedings", "Inproceedings"),
                            ("manual", "Manual"),
                            ("mastersthesis", "Master's Thesis"),
                            ("misc", "Miscellaneous"),
                            ("phdthesis", "PhD Thesis"),
                            ("proceedings", "Proceedings"),
                            ("techreport", "Technical Report"),
                            ("unpublished", "Unpublished"),
                            ("online", "Online"),
                            ("presentation", "Presentation"),
                        ],
                        max_length=20,
                    ),
                ),
                ("citekey", models.CharField(max_length=255)),
                ("title", models.CharField(blank=True, max_length=255, null=True)),
                ("author", models.CharField(blank=True, max_length=3000, null=True)),
                ("journal", models.CharField(blank=True, max_length=255, null=True)),
                ("booktitle", models.CharField(blank=True, max_length=255, null=True)),
                ("publisher", models.CharField(blank=True, max_length=255, null=True)),
                ("year", models.PositiveIntegerField(blank=True, null=True)),
                ("volume", models.CharField(blank=True, max_length=255, null=True)),
                ("number", models.CharField(blank=True, max_length=255, null=True)),
                ("pages", models.CharField(blank=True, max_length=255, null=True)),
                ("url", models.CharField(blank=True, max_length=255, null=True)),
                ("is_approved", models.BooleanField(default=False)),
            ],
        ),
    ]
